--- a/.gitignore
+++ b/.gitignore
@@ -74,5 +74,6 @@ CMakeLists.txt.user*
 
 # DebugFolders:
 build-SquareHackathon-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/
+build-SquareHackathon-Desktop-Debug
 
 
