--- a/.gitignore
+++ b/.gitignore
@@ -76,5 +76,5 @@ CMakeLists.txt.user*
 build-SquareHackathon-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/
 build-SquareHackathon-Desktop-Debug
 
-httpRequests.txt
+*/httpRequests.txt
 
