--- a/.gitignore
+++ b/.gitignore
@@ -77,4 +77,5 @@ build-SquareHackathon-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/
 build-SquareHackathon-Desktop-Debug
 
 */httpRequests.txt
+*/apiCode.txt
 
